<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<revision>0.0.1-SNAPSHOT</revision> <!-- Snapshot version -->
		<lombok.version>1.18.34</lombok.version> <!-- Lombok Version -->
		<swagger.version>2.6.0</swagger.version> <!-- Swagger Version -->
		<java.version>21</java.version>
		<postgre.version>42.7.3</postgre.version> <!-- PostgreSQL Version -->
	</properties>

	<name>hotel</name>
	<description>my project</description>
	<groupId>com.tinqinacademy.hotel</groupId>
	<artifactId>hotel</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<modules>
		<module>persistence</module>
		<module>domain</module>
		<module>core</module>
		<module>api</module>
		<module>rest</module>
	</modules>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>




	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.2.7</version> <!-- Use the latest version -->
				<executions>
					<execution>
						<goals>
							<goal>flatten</goal>
						</goals>
						<phase>process-resources</phase>
					</execution>
				</executions>
				<configuration>
					<!-- Optional configurations -->
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>